--- a/pickleback/MainStoryboard_iPhone.storyboard
+++ b/pickleback/MainStoryboard_iPhone.storyboard
@@ -7,7 +7,7 @@
         <!--Todo List View Controller - Drinkometer-->
         <scene sceneID="cCY-SB-wT5">
             <objects>
-                <tableViewController id="PsD-7a-zsW" customClass="QSTodoListViewController" sceneMemberID="viewController">
+                <tableViewController id="PsD-7a-zsW" customClass="PBTodoListViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelectionDuringEditing="YES" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" id="lJ7-Ej-a4P">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,24 +117,67 @@
             </objects>
             <point key="canvasLocation" x="-274" y="100"/>
         </scene>
-        <!--View Controller - Home-->
+        <!--Start View Controller - Start-->
         <scene sceneID="7GG-8k-cRR">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lWR-Ce-Z27" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="MKa-1S-2WM" sceneMemberID="viewController">
+                <viewController id="MKa-1S-2WM" customClass="PBStartViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e5Q-ok-Vpu">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" id="lei-dk-fXe">
-                                <rect key="frame" x="5" y="163" width="320" height="216"/>
+                                <rect key="frame" x="0.0" y="83" width="320" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rYg-mV-kZb">
+                                <rect key="frame" x="64" y="317" width="183" height="81"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Start session">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startTimer" destination="lWR-Ce-Z27" eventType="touchUpInside" id="cCv-hy-I7D"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Lxv-th-m9P">
+                                <rect key="frame" x="64" y="317" width="183" height="81"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Finish session">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopTimer" destination="lWR-Ce-Z27" eventType="touchUpInside" id="weh-0t-eQg"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JEQ-1B-1or">
+                                <rect key="frame" x="93" y="33" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="oa6-UU-JlK"/>
+                    <tabBarItem key="tabBarItem" title="Start" id="oa6-UU-JlK"/>
+                    <connections>
+                        <outlet property="pickerView" destination="lei-dk-fXe" id="kvF-LP-8qy"/>
+                        <outlet property="startButton" destination="rYg-mV-kZb" id="Huc-BN-g3n"/>
+                        <outlet property="stopButton" destination="Lxv-th-m9P" id="mzp-qe-8V5"/>
+                        <outlet property="timerCountLabel" destination="JEQ-1B-1or" id="Kwg-KX-cY3"/>
+                    </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lWR-Ce-Z27" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="14" y="-701"/>
         </scene>
@@ -142,7 +185,7 @@
         <scene sceneID="Gva-GE-AYO">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="XtG-l4-CNX" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="b7n-0v-5cn">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -190,8 +233,19 @@
         </scene>
     </scenes>
     <classes>
-        <class className="QSTodoListViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/QSTodoListViewController.h"/>
+        <class className="PBStartViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PBStartViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="startTimer"/>
+                <relationship kind="action" name="stopTimer"/>
+                <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="startButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerCountLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="PBTodoListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PBTodoListViewController.h"/>
             <relationships>
                 <relationship kind="action" name="onAdd:"/>
                 <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
